# verifiablejs

./: .gitignore  .npmignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PACKAGE-SPLIT-PLAN.md  README.md  dprint.json  package.json  pnpm-lock.yaml
.changeset/: auto-release-workflow.md  clean-jeans-leave.md  fix-npm-package.md  gentle-waves-swim.md  ten-bikes-like.md  test-release-flow.md  upgrade-verifiable-v030.md
.claude/: settings.local.json
.github/actions/publish-package/: action.yml
.github/workflows/: ci.yml  npm-release.yml
playground/bun/: CHANGELOG.md  index.js  index.ts  package.json  tsconfig.json
playground/vite/: CHANGELOG.md  index.html  main.js  main.ts  package.json  tsconfig.json  vite.config.js
src/: js_bindings.rs  lib.rs
