[package]
name = "verifiable-js-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-scale = { version = "0.0.12", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
bandersnatch_vrfs = { git = "https://github.com/w3f/ring-vrf.git", branch = "real-srs", default-features = false}
bounded-collections = { version = "0.1.8", default-features = false }
getrandom = { version = "0.2.11", features = ["js"] }
js-sys = "0.3.66"
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive","max-encoded-len"] }
verifiable = { git = "https://github.com/paritytech/verifiable", branch = "george/split-public-key", default-features = false, version = "*" }
wasm-bindgen = "0.2.89"

[dev-dependencies]
rand_core = "0.6"
wasm-bindgen-test = "0.3.40"

[lib]
crate-type = ["cdylib"]

[features]
default = [ "std", "small-ring" ]
std = [
  "bounded-collections/std",
  "parity-scale-codec/std",
  "verifiable/std",
  "ark-serialize/std",
  "ark-scale/std",
  "bandersnatch_vrfs/std",
]
small-ring = [
  "verifiable/small-ring",
]

[profile.test]
opt-level = 3

[profile.release]
lto = true