[package]
name = "verifiable"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the Parity Verifiable crate"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/verifiable.git"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
verifiable = { git = "https://github.com/paritytech/verifiable.git", branch = "main" }
wasm-bindgen = "0.2.90"
js-sys = "0.3.66"
getrandom = { version = "0.2.11", features = ["js"] }
parity-scale-codec = { version = "3.7.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.40"

[features]
default = ["std"]
std = [
    "verifiable/std",
    "parity-scale-codec/std",
    "scale-info/std"
]
small-ring = ["verifiable/small-ring"]
